# InsuranceAI

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: synthetic_insurance_data.json
src/: constants.py  insurance_agent.py  insurance_doc_classification.ipynb  model_training.py  prep_data.py
