[project]
name = "insuranceai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain[groq]>=0.3.18",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
]
